--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "b34f850c",
    "metadata": {},
    "outputs": [],
@@ -11,8 +11,8 @@
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
     "\n",
-    "from ThermoNet.net import ThermoNet\n",
-    "from ThermoNet.dataset import ThermoDataset\n",
+    "from LaengeNet.net import LaengeNet\n",
+    "from LaengeNet.dataset import LaengeDataset\n",
     "from torch.optim import *\n",
     "import torch.nn as nn"
    ]
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1610c68f",
+   "id": "4af54946",
    "metadata": {},
    "outputs": [],
    "source": []
