Update Element dataset and created ensemble net

--- a/notebooks/ThermoClassifier/train_PhaseClassifier.ipynb
+++ b/notebooks/ThermoClassifier/train_PhaseClassifier.ipynb
@@ -2,25 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9aa6c82e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'thermoclassifier'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-9c45ee2d8204>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mthermoclassifier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mphases\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPhaseClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mNeural_Nets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mClassification\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mClassificationDataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDevelopment\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mClassificationDataset\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'thermoclassifier'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from thermoclassifier.phases import PhaseClassifier\n",
-    "from Neural_Nets.Classification.ClassificationDataset.Development.ClassificationDataset import *\n",
+    "from thermoclassifier.phases.net import PhaseClassifier\n",
+    "from thermoclassifier.dataset.dataset_creator import *\n",
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -31,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8062abaf",
    "metadata": {
     "scrolled": false
@@ -69,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1bcc489a",
    "metadata": {},
    "outputs": [],
@@ -122,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "df4dd515",
    "metadata": {
     "scrolled": false
@@ -136,8 +124,7 @@
     "# Create the dataset\n",
     "measurement = 'G'\n",
     "element = 'Fe'\n",
-    "dc = DatasetCreator(r\"C:\\Users\\danie\\Documents\\Montanuni\\Masterarbeit\\4_Daten\\Elements.xlsx\", elements=[element], \n",
-    "                   splits=(0.8, 0.2), validation=False, seq_len=seq_len, measurement=measurement)\n",
+    "dc = DatasetCreator(elements=[element], splits=(0.8, 0.2), validation=False, seq_len=seq_len, measurement=measurement)\n",
     "train_dataset, test_dataset, val_dataset = dc.get_datasets()\n",
     "\n",
     "# Create the DataLoaders\n",
@@ -153,28 +140,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b2226823",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9544172854650588\n",
+      "Test accuracy:  0.6528052805280528\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6528052805280528"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Train the network\n",
     "best_net = train(net, train_loader, batch_size, seq_len)\n",
     "\n",
     "# Test the trained network\n",
     "test(best_net, test_loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53a39be2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#torch.save(net, 'Neural_Nets/Classification/PhaseClassifier/Models/model_14_02_22_1246')"
    ]
   },
   {
