Added TestSet creator

--- a/notebooks/sandbox/Untitled1.ipynb
+++ b/notebooks/sandbox/Untitled1.ipynb
@@ -3,113 +3,144 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a9cacf65",
+   "id": "cb7ffee7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thermoclassifier.dataset.dataset_creator import DatasetCreator"
+    "from thermoclassifier.dataset.dataset_creator import DatasetCreator\n",
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d20f3655",
+   "execution_count": 2,
+   "id": "e51a2507",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ag 1\n",
+      "Al 2\n",
+      "Am 3\n",
+      "As 4\n",
+      "Au 5\n",
+      "B 6\n",
+      "Ba 7\n",
+      "Be 8\n",
+      "Bi 9\n",
+      "C 10\n",
+      "Ca 11\n",
+      "Cd 12\n",
+      "Ce 13\n",
+      "Co 14\n",
+      "Cr 15\n",
+      "Cs 16\n",
+      "Cu 17\n",
+      "Dy 18\n",
+      "Er 19\n",
+      "Eu 20\n",
+      "Fe 21\n",
+      "Ga 22\n",
+      "Gd 23\n",
+      "Ge 24\n",
+      "Hf 25\n",
+      "Hg 26\n",
+      "Ho 27\n",
+      "In 28\n",
+      "Ir 29\n",
+      "K 30\n",
+      "La 31\n",
+      "Li 32\n",
+      "Lu 33\n",
+      "Mg 34\n",
+      "Mn 35\n",
+      "Mo 36\n",
+      "N 37\n",
+      "Na 38\n",
+      "Nb 39\n",
+      "Nd 40\n",
+      "Ni 41\n",
+      "Np 42\n",
+      "O 43\n",
+      "Os 44\n",
+      "P 45\n",
+      "Pa 46\n",
+      "Pb 47\n",
+      "Pd 48\n",
+      "Pr 49\n",
+      "Pt 50\n",
+      "Pu 51\n",
+      "Rb 52\n",
+      "Re 53\n",
+      "Rh 54\n",
+      "Ru 55\n",
+      "S 56\n",
+      "Sb 57\n",
+      "Sc 58\n",
+      "Se 59\n",
+      "Si 60\n",
+      "Sm 61\n",
+      "Sn 62\n",
+      "Sr 63\n",
+      "Ta 64\n",
+      "Tb 65\n",
+      "Tc 66\n",
+      "Te 67\n",
+      "Th 68\n",
+      "Ti 69\n",
+      "Tl 70\n",
+      "Tm 71\n",
+      "U 72\n",
+      "V 73\n",
+      "W 74\n",
+      "Y 75\n",
+      "Yb 76\n",
+      "Zn 77\n",
+      "Zr 78\n",
+      "Dataset shape:  (20466, 5, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dc = DatasetCreator(user='phase', measurement='C', elements=None)\n",
+    "train_dataset, test_dataset, val_dataset = dc.get_datasets()\n",
+    "\n",
+    "# Create the DataLoaders\n",
+    "train_loader = DataLoader(train_dataset, batch_size=1, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3ecbd8ea",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0)\n",
-      "(1, 1)\n",
-      "(2, 2)\n",
-      "(3, 3)\n",
-      "(4, 4)\n",
-      "(5, 5)\n",
-      "(6, 6)\n",
-      "(7, 7)\n",
-      "(8, 8)\n",
-      "(9, 9)\n",
-      "(10, 10)\n",
-      "(11, 11)\n",
-      "(12, 12)\n",
-      "(13, 13)\n",
-      "(14, 14)\n",
-      "(15, 15)\n",
-      "(16, 16)\n",
-      "(17, 17)\n",
-      "(18, 18)\n",
-      "(19, 19)\n",
-      "(20, 20)\n",
-      "(21, 21)\n",
-      "(22, 22)\n",
-      "(23, 23)\n",
-      "(24, 24)\n",
-      "(25, 25)\n",
-      "(26, 26)\n",
-      "(27, 27)\n",
-      "(28, 28)\n",
-      "(29, 29)\n",
-      "(30, 30)\n",
-      "(31, 31)\n",
-      "(32, 32)\n",
-      "(33, 33)\n",
-      "(34, 34)\n",
-      "(35, 35)\n",
-      "(36, 36)\n",
-      "(37, 37)\n",
-      "(38, 38)\n",
-      "(39, 39)\n",
-      "(40, 40)\n",
-      "(41, 41)\n",
-      "(42, 42)\n",
-      "(43, 43)\n",
-      "(44, 44)\n",
-      "(45, 45)\n",
-      "(46, 46)\n",
-      "(47, 47)\n",
-      "(48, 48)\n",
-      "(49, 49)\n",
-      "(50, 50)\n",
-      "(51, 51)\n",
-      "(52, 52)\n",
-      "(53, 53)\n",
-      "(54, 54)\n",
-      "(55, 55)\n",
-      "(56, 56)\n",
-      "(57, 57)\n",
-      "(58, 58)\n",
-      "(59, 59)\n",
-      "(60, 60)\n",
-      "(61, 61)\n",
-      "(62, 62)\n",
-      "(63, 63)\n",
-      "(64, 64)\n",
-      "(65, 65)\n",
-      "(66, 66)\n",
-      "(67, 67)\n",
-      "(68, 68)\n",
-      "(69, 69)\n",
-      "(70, 70)\n",
-      "(71, 71)\n",
-      "(72, 72)\n",
-      "(73, 73)\n",
-      "(74, 74)\n",
-      "(75, 75)\n",
-      "(76, 76)\n",
-      "(77, 77)\n",
-      "(20466, 5, 3)\n"
+      "tensor([[[ 451.0000,   28.2385,   21.0000,    3.0000],\n",
+      "         [ 483.0000,   28.9602,   21.0000,    3.0000],\n",
+      "         [ 730.0000,   36.2099,   21.0000,    3.0000],\n",
+      "         [1424.0000,   36.0064,   21.0000,    0.0000],\n",
+      "         [1534.0000,   36.9586,   21.0000,    0.0000]]], dtype=torch.float64)\n"
      ]
     }
    ],
    "source": [
-    "dc = DatasetCreator(user='element')"
+    "for d in train_loader:\n",
+    "    print(d)\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3a77f6",
+   "id": "b725c07a",
    "metadata": {},
    "outputs": [],
    "source": []
