--- a/notebooks/sandbox/Untitled2.ipynb
+++ b/notebooks/sandbox/Untitled2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "37c11d4d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "9fb31c94",
    "metadata": {},
    "outputs": [],
@@ -26,16 +26,16 @@
     "\n",
     "x = np.arange(0, 101)/100\n",
     "\n",
-    "pg.add_constraint(np.array([0.9]), 0, 0)\n",
-    "pg.add_constraint(np.array([0.9]), 1, 0)\n",
-    "pg.add_constraint(np.array([0.5]), 0, 5)\n",
-    "pg.add_constraint(np.array([0.1]), 0, 0)\n",
-    "pg.add_constraint(np.array([0.1]), 1, 0)"
+    "pg.add_constraint(0.9, 0, 0)\n",
+    "pg.add_constraint(0.9, 1, 0)\n",
+    "pg.add_constraint(0.5, 0, 5)\n",
+    "pg.add_constraint(0.1, 0, 0)\n",
+    "pg.add_constraint(0.1, 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "d59021f0",
    "metadata": {},
    "outputs": [],
@@ -44,14 +44,14 @@
     "\n",
     "x = np.arange(0, 101)/100\n",
     "\n",
-    "qg.add_constraint(np.array([0.3]), 0, 0)\n",
-    "qg.add_constraint(np.array([0.3]), 1, 0)\n",
-    "qg.add_constraint(np.array([0.5]), 0, 2)"
+    "qg.add_constraint(0.3, 0, 0)\n",
+    "qg.add_constraint(0.3, 1, 0)\n",
+    "qg.add_constraint(0.5, 0, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "9107f667",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "5827dda7",
    "metadata": {},
    "outputs": [],
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "375fab70",
    "metadata": {},
    "outputs": [],
    "source": [
     "seq1 = nn.Sequential(\n",
-    "    nn.Linear(200, 128),\n",
+    "    nn.Linear(100, 128),\n",
     "    nn.ReLU(),\n",
     "    nn.Linear(128, 128),\n",
     "    nn.ReLU(),\n",
@@ -112,7 +112,7 @@
     "    nn.ReLU(),\n",
     "    nn.Linear(64, 32),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(32, 2),\n",
+    "    nn.Linear(32, 1),\n",
     "    nn.Sigmoid()\n",
     "    )\n",
     "\n",
@@ -125,14 +125,14 @@
     "    nn.ReLU(),\n",
     "    nn.Linear(64, 32),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(32, 10),\n",
+    "    nn.Linear(32, 1),\n",
     "    nn.Sigmoid()\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "c64b56b0",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "13f23a24",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "3bd43358",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "2e8caa5b",
    "metadata": {},
    "outputs": [
@@ -264,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "233e6d8c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x249adfeb940>]"
+       "[<matplotlib.lines.Line2D at 0x28677f5a190>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "76d6163d",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "444e0332",
    "metadata": {
     "scrolled": false
@@ -326,106 +326,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(41871812., grad_fn=<AddBackward0>)\n",
-      "tensor(56252.7695, grad_fn=<AddBackward0>)\n",
-      "tensor(826.3285, grad_fn=<AddBackward0>)\n",
-      "tensor(826.1981, grad_fn=<AddBackward0>)\n",
-      "tensor(826.0547, grad_fn=<AddBackward0>)\n",
-      "tensor(825.8832, grad_fn=<AddBackward0>)\n",
-      "tensor(825.6785, grad_fn=<AddBackward0>)\n",
-      "tensor(825.4075, grad_fn=<AddBackward0>)\n",
-      "tensor(825.1711, grad_fn=<AddBackward0>)\n",
-      "tensor(824.8170, grad_fn=<AddBackward0>)\n",
-      "tensor(824.4400, grad_fn=<AddBackward0>)\n",
-      "tensor(823.9856, grad_fn=<AddBackward0>)\n",
-      "tensor(823.4084, grad_fn=<AddBackward0>)\n",
-      "tensor(822.8098, grad_fn=<AddBackward0>)\n",
-      "tensor(822.1285, grad_fn=<AddBackward0>)\n",
-      "tensor(821.3560, grad_fn=<AddBackward0>)\n",
-      "tensor(820.4435, grad_fn=<AddBackward0>)\n",
-      "tensor(819.4537, grad_fn=<AddBackward0>)\n",
-      "tensor(818.3813, grad_fn=<AddBackward0>)\n",
-      "tensor(817.1226, grad_fn=<AddBackward0>)\n",
-      "tensor(815.7252, grad_fn=<AddBackward0>)\n",
-      "tensor(814.1904, grad_fn=<AddBackward0>)\n",
-      "tensor(812.4620, grad_fn=<AddBackward0>)\n",
-      "tensor(810.5052, grad_fn=<AddBackward0>)\n",
-      "tensor(808.3943, grad_fn=<AddBackward0>)\n",
-      "tensor(806.0920, grad_fn=<AddBackward0>)\n",
-      "tensor(803.4691, grad_fn=<AddBackward0>)\n",
-      "tensor(800.6013, grad_fn=<AddBackward0>)\n",
-      "tensor(797.4405, grad_fn=<AddBackward0>)\n",
-      "tensor(793.9735, grad_fn=<AddBackward0>)\n",
-      "tensor(790.1239, grad_fn=<AddBackward0>)\n",
-      "tensor(785.8955, grad_fn=<AddBackward0>)\n",
-      "tensor(781.2227, grad_fn=<AddBackward0>)\n",
-      "tensor(776.0972, grad_fn=<AddBackward0>)\n",
-      "tensor(770.4976, grad_fn=<AddBackward0>)\n",
-      "tensor(764.2827, grad_fn=<AddBackward0>)\n",
-      "tensor(757.4769, grad_fn=<AddBackward0>)\n",
-      "tensor(750.0711, grad_fn=<AddBackward0>)\n",
-      "tensor(741.8844, grad_fn=<AddBackward0>)\n",
-      "tensor(732.9383, grad_fn=<AddBackward0>)\n",
-      "tensor(723.1534, grad_fn=<AddBackward0>)\n",
-      "tensor(712.4827, grad_fn=<AddBackward0>)\n",
-      "tensor(700.5371, grad_fn=<AddBackward0>)\n",
-      "tensor(687.2301, grad_fn=<AddBackward0>)\n",
-      "tensor(672.7769, grad_fn=<AddBackward0>)\n",
-      "tensor(657.2189, grad_fn=<AddBackward0>)\n",
-      "tensor(640.3727, grad_fn=<AddBackward0>)\n",
-      "tensor(622.2387, grad_fn=<AddBackward0>)\n",
-      "tensor(602.6675, grad_fn=<AddBackward0>)\n",
-      "tensor(581.5748, grad_fn=<AddBackward0>)\n",
-      "tensor(559.0040, grad_fn=<AddBackward0>)\n",
-      "tensor(534.8345, grad_fn=<AddBackward0>)\n",
-      "tensor(509.5615, grad_fn=<AddBackward0>)\n",
-      "tensor(483.9479, grad_fn=<AddBackward0>)\n",
-      "tensor(453.2428, grad_fn=<AddBackward0>)\n",
-      "tensor(417.1471, grad_fn=<AddBackward0>)\n",
-      "tensor(352.8653, grad_fn=<AddBackward0>)\n",
-      "tensor(311.0573, grad_fn=<AddBackward0>)\n",
-      "tensor(272.0060, grad_fn=<AddBackward0>)\n",
-      "tensor(238.7305, grad_fn=<AddBackward0>)\n",
-      "tensor(208.6438, grad_fn=<AddBackward0>)\n",
-      "tensor(180.1358, grad_fn=<AddBackward0>)\n",
-      "tensor(153.1400, grad_fn=<AddBackward0>)\n",
-      "tensor(129.0021, grad_fn=<AddBackward0>)\n",
-      "tensor(108.8510, grad_fn=<AddBackward0>)\n",
-      "tensor(93.0204, grad_fn=<AddBackward0>)\n",
-      "tensor(79.8528, grad_fn=<AddBackward0>)\n",
-      "tensor(69.3160, grad_fn=<AddBackward0>)\n",
-      "tensor(59.8975, grad_fn=<AddBackward0>)\n",
-      "tensor(50.7784, grad_fn=<AddBackward0>)\n",
-      "tensor(43.4930, grad_fn=<AddBackward0>)\n",
-      "tensor(38.2759, grad_fn=<AddBackward0>)\n",
-      "tensor(31.5845, grad_fn=<AddBackward0>)\n",
-      "tensor(27.3235, grad_fn=<AddBackward0>)\n",
-      "tensor(23.2663, grad_fn=<AddBackward0>)\n",
-      "tensor(20.7876, grad_fn=<AddBackward0>)\n",
-      "tensor(17.7608, grad_fn=<AddBackward0>)\n",
-      "tensor(15.0566, grad_fn=<AddBackward0>)\n",
-      "tensor(13.0523, grad_fn=<AddBackward0>)\n",
-      "tensor(11.2583, grad_fn=<AddBackward0>)\n",
-      "tensor(9.7451, grad_fn=<AddBackward0>)\n",
-      "tensor(11.7391, grad_fn=<AddBackward0>)\n",
-      "tensor(7.7731, grad_fn=<AddBackward0>)\n",
-      "tensor(6.5121, grad_fn=<AddBackward0>)\n",
-      "tensor(5.7622, grad_fn=<AddBackward0>)\n",
-      "tensor(5.0381, grad_fn=<AddBackward0>)\n",
-      "tensor(4.3427, grad_fn=<AddBackward0>)\n",
-      "tensor(3.6836, grad_fn=<AddBackward0>)\n",
-      "tensor(3.0726, grad_fn=<AddBackward0>)\n",
-      "tensor(2.5891, grad_fn=<AddBackward0>)\n",
-      "tensor(2.2038, grad_fn=<AddBackward0>)\n",
-      "tensor(1.8566, grad_fn=<AddBackward0>)\n",
-      "tensor(1.6120, grad_fn=<AddBackward0>)\n",
-      "tensor(2.6360, grad_fn=<AddBackward0>)\n",
-      "tensor(1.0744, grad_fn=<AddBackward0>)\n",
-      "tensor(4.5181, grad_fn=<AddBackward0>)\n",
-      "tensor(1.2691, grad_fn=<AddBackward0>)\n",
-      "tensor(0.6638, grad_fn=<AddBackward0>)\n",
-      "tensor(1.3609, grad_fn=<AddBackward0>)\n",
-      "tensor(0.4007, grad_fn=<AddBackward0>)\n"
+      "tensor(2266651.5000, grad_fn=<AddBackward0>)\n",
+      "tensor(686.4788, grad_fn=<AddBackward0>)\n",
+      "tensor(686.3583, grad_fn=<AddBackward0>)\n",
+      "tensor(686.2147, grad_fn=<AddBackward0>)\n",
+      "tensor(685.9396, grad_fn=<AddBackward0>)\n",
+      "tensor(685.4930, grad_fn=<AddBackward0>)\n",
+      "tensor(684.9785, grad_fn=<AddBackward0>)\n",
+      "tensor(684.3647, grad_fn=<AddBackward0>)\n",
+      "tensor(683.6280, grad_fn=<AddBackward0>)\n",
+      "tensor(682.6763, grad_fn=<AddBackward0>)\n",
+      "tensor(681.5231, grad_fn=<AddBackward0>)\n",
+      "tensor(680.1682, grad_fn=<AddBackward0>)\n",
+      "tensor(678.7189, grad_fn=<AddBackward0>)\n",
+      "tensor(677.1445, grad_fn=<AddBackward0>)\n",
+      "tensor(675.3940, grad_fn=<AddBackward0>)\n",
+      "tensor(673.5035, grad_fn=<AddBackward0>)\n",
+      "tensor(671.4335, grad_fn=<AddBackward0>)\n",
+      "tensor(669.2173, grad_fn=<AddBackward0>)\n",
+      "tensor(666.7336, grad_fn=<AddBackward0>)\n",
+      "tensor(664.0698, grad_fn=<AddBackward0>)\n",
+      "tensor(661.0870, grad_fn=<AddBackward0>)\n",
+      "tensor(657.7549, grad_fn=<AddBackward0>)\n",
+      "tensor(654.0447, grad_fn=<AddBackward0>)\n",
+      "tensor(649.9932, grad_fn=<AddBackward0>)\n",
+      "tensor(645.6235, grad_fn=<AddBackward0>)\n",
+      "tensor(640.8658, grad_fn=<AddBackward0>)\n",
+      "tensor(635.5637, grad_fn=<AddBackward0>)\n",
+      "tensor(629.7177, grad_fn=<AddBackward0>)\n",
+      "tensor(623.4686, grad_fn=<AddBackward0>)\n",
+      "tensor(616.5035, grad_fn=<AddBackward0>)\n",
+      "tensor(608.6661, grad_fn=<AddBackward0>)\n",
+      "tensor(600.1749, grad_fn=<AddBackward0>)\n",
+      "tensor(590.9141, grad_fn=<AddBackward0>)\n",
+      "tensor(580.7945, grad_fn=<AddBackward0>)\n",
+      "tensor(570.0161, grad_fn=<AddBackward0>)\n",
+      "tensor(558.2900, grad_fn=<AddBackward0>)\n",
+      "tensor(545.6065, grad_fn=<AddBackward0>)\n",
+      "tensor(531.9656, grad_fn=<AddBackward0>)\n",
+      "tensor(517.3754, grad_fn=<AddBackward0>)\n",
+      "tensor(502.1159, grad_fn=<AddBackward0>)\n",
+      "tensor(486.5005, grad_fn=<AddBackward0>)\n",
+      "tensor(469.4641, grad_fn=<AddBackward0>)\n",
+      "tensor(450.0820, grad_fn=<AddBackward0>)\n",
+      "tensor(429.4548, grad_fn=<AddBackward0>)\n",
+      "tensor(407.8555, grad_fn=<AddBackward0>)\n",
+      "tensor(465.1030, grad_fn=<AddBackward0>)\n",
+      "tensor(373.9436, grad_fn=<AddBackward0>)\n",
+      "tensor(359.3062, grad_fn=<AddBackward0>)\n",
+      "tensor(344.3185, grad_fn=<AddBackward0>)\n",
+      "tensor(328.6426, grad_fn=<AddBackward0>)\n",
+      "tensor(312.7229, grad_fn=<AddBackward0>)\n",
+      "tensor(298.7791, grad_fn=<AddBackward0>)\n",
+      "tensor(284.8847, grad_fn=<AddBackward0>)\n",
+      "tensor(271.2421, grad_fn=<AddBackward0>)\n",
+      "tensor(260.8795, grad_fn=<AddBackward0>)\n",
+      "tensor(248.6357, grad_fn=<AddBackward0>)\n",
+      "tensor(241.5389, grad_fn=<AddBackward0>)\n",
+      "tensor(234.2573, grad_fn=<AddBackward0>)\n",
+      "tensor(226.3049, grad_fn=<AddBackward0>)\n",
+      "tensor(217.8976, grad_fn=<AddBackward0>)\n",
+      "tensor(209.2305, grad_fn=<AddBackward0>)\n",
+      "tensor(200.6510, grad_fn=<AddBackward0>)\n",
+      "tensor(192.5212, grad_fn=<AddBackward0>)\n",
+      "tensor(185.2193, grad_fn=<AddBackward0>)\n",
+      "tensor(177.6225, grad_fn=<AddBackward0>)\n",
+      "tensor(171.5210, grad_fn=<AddBackward0>)\n",
+      "tensor(165.1014, grad_fn=<AddBackward0>)\n",
+      "tensor(158.3275, grad_fn=<AddBackward0>)\n",
+      "tensor(152.8190, grad_fn=<AddBackward0>)\n",
+      "tensor(146.1369, grad_fn=<AddBackward0>)\n",
+      "tensor(139.6760, grad_fn=<AddBackward0>)\n",
+      "tensor(135.8696, grad_fn=<AddBackward0>)\n",
+      "tensor(127.5711, grad_fn=<AddBackward0>)\n",
+      "tensor(121.8684, grad_fn=<AddBackward0>)\n",
+      "tensor(117.4591, grad_fn=<AddBackward0>)\n",
+      "tensor(113.1992, grad_fn=<AddBackward0>)\n",
+      "tensor(109.0155, grad_fn=<AddBackward0>)\n",
+      "tensor(104.4684, grad_fn=<AddBackward0>)\n",
+      "tensor(101.0150, grad_fn=<AddBackward0>)\n",
+      "tensor(96.5015, grad_fn=<AddBackward0>)\n",
+      "tensor(94.0070, grad_fn=<AddBackward0>)\n",
+      "tensor(90.8764, grad_fn=<AddBackward0>)\n",
+      "tensor(87.7280, grad_fn=<AddBackward0>)\n",
+      "tensor(85.3082, grad_fn=<AddBackward0>)\n",
+      "tensor(81.8546, grad_fn=<AddBackward0>)\n",
+      "tensor(79.0821, grad_fn=<AddBackward0>)\n",
+      "tensor(76.2126, grad_fn=<AddBackward0>)\n",
+      "tensor(103.7398, grad_fn=<AddBackward0>)\n",
+      "tensor(70.5192, grad_fn=<AddBackward0>)\n",
+      "tensor(67.7659, grad_fn=<AddBackward0>)\n",
+      "tensor(66.0550, grad_fn=<AddBackward0>)\n",
+      "tensor(64.0735, grad_fn=<AddBackward0>)\n",
+      "tensor(62.0669, grad_fn=<AddBackward0>)\n",
+      "tensor(59.9386, grad_fn=<AddBackward0>)\n",
+      "tensor(57.7536, grad_fn=<AddBackward0>)\n",
+      "tensor(59.9017, grad_fn=<AddBackward0>)\n",
+      "tensor(53.4767, grad_fn=<AddBackward0>)\n",
+      "tensor(52.2347, grad_fn=<AddBackward0>)\n",
+      "tensor(50.0806, grad_fn=<AddBackward0>)\n",
+      "tensor(51.7035, grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
     "\n",
     "for i in range(nr_epochs):\n",
     "    inp = torch.tensor([tk/1000], dtype=torch.float)\n",
-    "    xl, xs = seq1(torch.hstack((glx, gsx)).float()/1000)#, seq2(gsx.float()/1000)\n",
+    "    xl, xs = seq1(glx.float()/1000), seq2(gsx.float()/1000)\n",
     "\n",
     "    gl, gs, glxl, gsxs = funcs(xl, xs, tk, a=a, b=b)\n",
     "    \n",
@@ -456,26 +456,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "fb33eb70",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "tensor(0.5902, grad_fn=<UnbindBackward0>)\n",
-      "tensor(0.6008, grad_fn=<UnbindBackward0>)\n",
-      "\n",
-      "tensor(7609.9995, grad_fn=<AddBackward0>)\n",
-      "tensor(7610.5762, grad_fn=<SubBackward0>)\n",
-      "\n",
-      "tensor(-15658.6709, grad_fn=<SubBackward0>)\n",
-      "tensor(-15657.1826, grad_fn=<SubBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print()\n",
     "print(xl)\n",
