--- a/notebooks/sandbox/Untitled.ipynb
+++ b/notebooks/sandbox/Untitled.ipynb
@@ -21,6 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "679f17cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "d7c47151",
    "metadata": {},
    "outputs": [],
